# nixos-config

./: .sops.yaml  README.md  flake.nix  stat-code.sh
apps/settings/: Cargo.toml
apps/settings/src/: main.rs
home/raskil/: common.nix  default.nix  home.nix  hyprland.nix  mako.nix  packages.nix  programs.nix  services.nix  settings.nix  waybar.nix
home/raskil/common/: default.nix
home/raskil/files/: hyprlock.conf
home/raskil/hosts/: desktop.nix  laptop.nix
home/raskil/hypr/: hyprpaper.conf
home/raskil/modules/: packages.nix  programs.nix  services.nix  settings.nix
home/raskil/programs/: cli.nix  default.nix  looking-glass.nix  theme.nix  xdg.nix
home/raskil/services/: default.nix
home/raskil/waybar/: config  style.css
home/raskil/wofi/: scale-manager.css
hosts/common/: default.nix
hosts/desktop/: configuration.nix  default.nix  hardware-configuration.nix
hosts/laptop/: configuration.nix  default.nix  hardware-configuration.nix  nvidia.nix
modules/: common.nix  devtools.nix  greetd.nix  locale.nix  packages.nix  users.nix  wayland-hyprland.nix
modules/nixos/: default.nix
modules/nixos/core/: base.nix  default.nix  fonts.nix  locale.nix  network.nix  users.nix
modules/nixos/desktop/: default.nix  login.nix  portal.nix  shell.nix
modules/nixos/devel/: default.nix  tooling.nix  (+1 more)
modules/overlays/: default.nix
modules/system/: common.nix  devtools.nix  greetd.nix  packages.nix  users.nix  wayland-hyprland.nix
pkgs/solidworks/: default.nix
profiles/workstations/: graphical.nix
secrets/: secrets.yaml
settings/: settings.json
(+23 files in other folders)
