[package]
name = "raskil-settings"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8", package = "gtk4" }
libadwaita = { version = "0.6", package = "adw", features = ["v1_4"] }
glib = "0.18"
gio = { version = "0.18", features = ["v2_74"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

