[package]
name = "raskil-settings"
version = "0.1.0"
edition = "2021"

[dependencies]
# GTK 4 bindings crate is *gtk4*
gtk4 = "0.10"
glib = "0.20"
gio = { version = "0.20", features = ["v2_74"] }

# Libadwaita; we alias it to `adw`
[dependencies.adw]
package = "libadwaita"
version = "0.8"
features = ["v1_5"]

